--- a/.env
+++ b/.env
@@ -4,3 +4,12 @@
 # https://www.builder.io/c/docs/using-your-api-key
 VITE_PUBLIC_BUILDER_KEY=__BUILDER_PUBLIC_KEY__
 PING_MESSAGE="ping pong"
+
+# Admin credentials - CHANGE THESE IN PRODUCTION
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin123
+ADMIN_EMAIL=admin@lifelineshelter.com
+
+# Server configuration
+PORT=3000
+NODE_ENV=development
