--- a/.env
+++ b/.env
@@ -13,3 +13,10 @@ ADMIN_EMAIL=admin@lifelineshelter.com
 # Server configuration
 PORT=3000
 NODE_ENV=development
+
+# SMTP configuration for Get Involved form
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your_smtp_user@example.com
+SMTP_PASS=your_smtp_password
+CONTACT_EMAIL=customerrepresentative@lifelineshelter.com
