--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@ PORT=3000
 NODE_ENV=development
 
 # SMTP configuration for Get Involved form
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USER=your_smtp_user@example.com
-SMTP_PASS=your_smtp_password
+SMTP_HOST=mail.lifelineshelter.com
+SMTP_PORT=465
+SMTP_USER=customerrepresentative@lifelineshelter.com
+SMTP_PASS=your_email_password_here
 CONTACT_EMAIL=customerrepresentative@lifelineshelter.com
