--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "scripts": {
     "dev": "vite",
+    "build": "pnpm run build:client && pnpm run build:server",
+    "start": "node dist/server/node-build.mjs"
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
     "build:server": "vite build --config vite.config.server.ts",
