--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,50 +1,32 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "target": "ES2022",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-
-    /* React + Vite */
-    "jsx": "react-jsx",
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "esModuleInterop": true,
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-
-    /* File Consistency */
+    "esModuleInterop": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "noEmit": true,
-
-    /* Linting settings */
-    "strict": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitAny": false,
-    "strictNullChecks": false,
-
-    /* Path Aliases */
+    "noEmitOnError": false,
+    "outDir": "./server",
+    "declaration": false,
+    "sourceMap": false,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["client/*"],
       "@shared/*": ["shared/*"],
       "@server/*": ["server/*"]
     },
-
     "ignoreDeprecations": "6.0"
   },
-
   "include": [
-    "client/**/*",
     "server/**/*",
     "shared/**/*",
-    "vite.config.ts",
-    "vite.config.server.ts"
+    "client/**/*"
   ],
-
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "exclude": ["node_modules"]
 }
