Add updated dist folder

--- a/.env
+++ b/.env
@@ -18,5 +18,5 @@ NODE_ENV=development
 SMTP_HOST=mail.lifelineshelter.com
 SMTP_PORT=465
 SMTP_USER=customerrepresentative@lifelineshelter.com
-SMTP_PASS=your_email_password_here
+SMTP_PASS= Makuo123@
 CONTACT_EMAIL=customerrepresentative@lifelineshelter.com
