--- a/.env
+++ b/.env
@@ -1,22 +1,1 @@
-# .env is better suited for public variables, ie, variables that should not commited
-# For secret variables is better to use DevServerControl tool with set_env_variable: ["KEY", "SECRET"]
-
-# https://www.builder.io/c/docs/using-your-api-key
-VITE_PUBLIC_BUILDER_KEY=25e9b42481114b6dbef77130dd6fe8bd
-PING_MESSAGE="ping pong"
-
-# Admin credentials - CHANGE THESE IN PRODUCTION
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin123
-ADMIN_EMAIL=admin@lifelineshelter.com
-
-# Server configuration
-PORT=3000
-NODE_ENV=development
-
-# SMTP configuration for Get Involved form
-SMTP_HOST=mail.lifelineshelter.com
-SMTP_PORT=465
-SMTP_USER=customerrepresentative@lifelineshelter.com
-SMTP_PASS= Makuo123@
-CONTACT_EMAIL=customerrepresentative@lifelineshelter.com
+VITE_API_URL=http://localhost:3000/api
