--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-VITE_API_URL=http://localhost:3000/api
-=======
 # .env is better suited for public variables, ie, variables that should not commited
 # For secret variables is better to use DevServerControl tool with set_env_variable: ["KEY", "SECRET"]
 
@@ -15,7 +12,7 @@ ADMIN_EMAIL=admin@lifelineshelter.com
 
 # Server configuration
 PORT=3000
-NODE_ENV=development
+NODE_ENV=production
 
 # SMTP configuration for Get Involved form
 SMTP_HOST=mail.lifelineshelter.com
@@ -23,4 +20,3 @@ SMTP_PORT=465
 SMTP_USER=customerrepresentative@lifelineshelter.com
 SMTP_PASS= Makuo123@
 CONTACT_EMAIL=customerrepresentative@lifelineshelter.com
->>>>>>> 00facb1211c512c7a081db9dad7bc06abda86613
