--- a/.env
+++ b/.env
@@ -19,3 +19,8 @@ SMTP_PORT=465
 SMTP_USER=customerrepresentative@lifelineshelter.com
 SMTP_PASS= Makuo123@
 CONTACT_EMAIL=customerrepresentative@lifelineshelter.com
+
+
+# https://www.builder.io/c/docs/using-your-api-key
+VITE_PUBLIC_BUILDER_KEY=25e9b42481114b6dbef77130dd6fe8bd
+
