--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ ADMIN_EMAIL=admin@lifelineshelter.com
 PORT=3000
 
 # SMTP configuration for Get Involved form
-SMTP_HOST=mail.lifelineshelter.com
+SMTP_HOST=email-smtp.us-east-1.amazonaws.com
 SMTP_PORT=587
 SMTP_USER=customerrepresentative@lifelineshelter.com
 SMTP_PASS= Makuo123@
