--- a/.env
+++ b/.env
@@ -13,11 +13,8 @@ ADMIN_EMAIL=admin@lifelineshelter.com
 # Server configuration
 PORT=3000
 
-# SMTP configuration for Get Involved form
-SMTP_HOST=email-smtp.us-east-1.amazonaws.com
-SMTP_PORT=587
-SMTP_USER=customerrepresentative@lifelineshelter.com
-SMTP_PASS= Makuo123@
+RESEND_API_KEY=re_BabZS8i9_KxLLg9dY2Mjroc8MQpGFCAKE
+FROM_EMAIL=admin@lifelineshelter.com   # must be verified sender
 CONTACT_EMAIL=customerrepresentative@lifelineshelter.com
 
 
