--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "nodemailer": "^7.0.11",
     "path-to-regexp": "^8.3.0",
+    "resend": "^6.6.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
