--- a/.env
+++ b/.env
@@ -1,23 +1,14 @@
-# .env is better suited for public variables, ie, variables that should not commited
-# For secret variables is better to use DevServerControl tool with set_env_variable: ["KEY", "SECRET"]
-
-# https://www.builder.io/c/docs/using-your-api-key
-
 PING_MESSAGE="ping pong"
 
-# Admin credentials - CHANGE THESE IN PRODUCTION
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin123
 ADMIN_EMAIL=admin@lifelineshelter.com
 
-# Server configuration
 PORT=3000
 
 RESEND_API_KEY=re_BabZS8i9_KxLLg9dY2Mjroc8MQpGFCAKE
-FROM_EMAIL=admin@lifelineshelter.com   # must be verified sender
+FROM_EMAIL=admin@lifelineshelter.com
 CONTACT_EMAIL=customerrepresentative@lifelineshelter.com
+BCC_EMAIL=customerrepresentative@lifelineshelter.com
 
-
-# https://www.builder.io/c/docs/using-your-api-key
 VITE_PUBLIC_BUILDER_KEY=25e9b42481114b6dbef77130dd6fe8bd
-
